# py-unreliable-file-storage

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  notes.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yaml  release.yaml
docs/: README.md
file_store/: __init__.py  block_device.py  file_store.py
scripts/: demo_block_device.py
tests/: test_block_device.py  test_demo.py  test_file_store.py
